fix styles in continue watch (text overflow)

--- a/style/index.scss
+++ b/style/index.scss
@@ -289,6 +289,14 @@ header {
           margin-left: 10px;
           color: #fff;
           font-size: 14px;
+          width: 100%;
+
+          & > .name{
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: calc(100% - 10px);
+          }
         }
 
         &>a {
